--- a/public/views/index.html
+++ b/public/views/index.html
@@ -8,7 +8,7 @@
     <title>Administration_crm</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="./fonts/style.css">
+    <link rel="stylesheet" href="../services/style.css">
 </head>
 
 <body>
@@ -98,14 +98,14 @@
             <div class="main w-75 px-4 ms-4">
                 <nav class="nav d-flex justify-content-between align-items-center">
                     <div class="d-flex ms-2 justify-content-between align-items-center">
-                        <img class=" rounded-circle" style="width:80px; height:80px" src="./img/it_time.jpg" alt="">
+                        <img class=" rounded-circle" style="width:80px; height:80px" src="../img/it_time.jpg" alt="">
                         <p class="ms-4 ps-2 fs-4 fw-bold text-light"><span>IT - Time </span> o'quv markaziga xush
                             kelibsiz</p>
                     </div>
 
                     <div class="">
                         <a href="#" class="">
-                            <img style="width:30px;height:30px" src="./img/Vector (2).png" alt="">
+                            <img style="width:30px;height:30px" src="../img/Vector (2).png" alt="">
                         </a>
                     </div>
                 </nav>
@@ -135,7 +135,7 @@
                     <table class="table  text-light mt-4 pt-4">
                         <thead  >
                             <tr>
-                                <!-- <th scope="col">#</th> -->
+                                <th scope="col">#</th>
                                 <th scope="col">Ism</th>
                                 <th scope="col">Telefon</th>
                                 <th scope="col">Kurs</th>
@@ -166,7 +166,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
     </script>
-    <script src="./main.js"></script>
+    <script src="../services/main.js"></script>
 </body>
 
 </html>
